fix(css): fixes image sizes on small devices

--- a/assets/css/default.sass
+++ b/assets/css/default.sass
@@ -30,6 +30,7 @@ img
 	display: block
 	margin-left: auto
 	margin-right: auto
+	max-width: 100%
 
 // main heading
 h1
